# docu-test

./: Makefile  readme.md
alarm/: Dockerfile  Makefile  memory_alarm.py  pyproject.toml
api/: Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml
api/apps/memory/: models.py  routes.py
api/settings/: config.py  database.py
